--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,9 @@
     <color name="bgToolbar">#183545</color>
     <color name="colorWhite">#fff</color>
     <color name="bgcam">#f67122</color>
+
+    <color name="colorGray">#CCC</color>
+    <color name="colorFacebook">#4a6ea9</color>
+    <color name="colorGoogle">#da4835</color>
+    <color name="colorBlack">#000000</color>
 </resources>
