--- a/app/src/main/res/menu/menutrangchu.xml
+++ b/app/src/main/res/menu/menutrangchu.xml
@@ -37,7 +37,7 @@
                 />
 
             <item
-                android:id="@+id/itMongMuon"
+                android:id="@+id/itDanhSachMongMuon"
                 android:title="@string/title_itMongMuon"
                 android:icon="@drawable/ic_favorite_border_black_24dp"
                 />
