--- a/app/src/main/res/layout/layout_fragment_dangky.xml
+++ b/app/src/main/res/layout/layout_fragment_dangky.xml
@@ -22,7 +22,8 @@
     <ScrollView
         android:id="@+id/login_form"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginTop="10dp">
 
         <LinearLayout
             android:id="@+id/email_login_form"
@@ -101,7 +102,7 @@
             </android.support.design.widget.TextInputLayout>
 
             <Button
-                android:id="@+id/email_sign_in_button"
+                android:id="@+id/btnDangKy"
                 style="?android:textAppearanceSmall"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -109,6 +110,12 @@
                 android:background="@color/bgcam"
                 android:text="@string/title_button_dangky"
                 android:textStyle="bold" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:text="@string/dieu_khoan"/>
 
         </LinearLayout>
     </ScrollView>
