--- a/app/src/main/res/layout/trangchu_layout.xml
+++ b/app/src/main/res/layout/trangchu_layout.xml
@@ -48,14 +48,13 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:drawableLeft="@drawable/icsearchblack24dp"
-                            android:text="@string/text_search"
+                            android:hint="@string/text_search"
                             android:layout_gravity="start"
-                            android:paddingRight="150dp"
                             android:textAlignment="viewStart"
                             android:textAllCaps="false"
                             android:layout_weight="1"
-                            android:background="@color/colorWhite"
-                            android:layout_marginLeft="10dp"
+                            android:background="@drawable/selectorbgsearch"
+                            android:paddingLeft="10dp"
 
                             />
                         <View
@@ -69,7 +68,7 @@
                             android:layout_height="wrap_content"
                             android:layout_margin="10dp"
                             android:src="@drawable/ic_photo_camera_black_24dp"
-                            android:background="@color/colorWhite"/>
+                            android:background="@drawable/selectorbgsearch"/>
                     </LinearLayout>
                     <android.support.design.widget.TabLayout
                         android:id="@+id/tabs"
