--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="colorFacebook">#4a6ea9</color>
     <color name="colorGoogle">#da4835</color>
     <color name="colorBlack">#000000</color>
+    <color name="tranparentBlack">#B2000000</color>
 </resources>
